Revert "Fix issue with carousel alignment on mobile"
This reverts commit 83a293f8872747e3cf2ced77db3c7c1b8849d031.

--- a/packages/bpk-component-card-list/src/BpkCardListRowRail/BpkCardListCarousel.module.scss
+++ b/packages/bpk-component-card-list/src/BpkCardListRowRail/BpkCardListCarousel.module.scss
@@ -29,7 +29,6 @@
     overflow-x: hidden;
     box-sizing: border-box;
     gap: tokens.bpk-spacing-sm();
-    margin-inline: -1 * tokens.bpk-spacing-md();
     scroll-snap-stop: always;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
@@ -73,11 +72,22 @@
             ) /
             max(1, (var(--initially-shown-cards, 3) - 0.8))
         );
+
+        &:first-child {
+          padding-left: tokens.bpk-spacing-sm();
+
+          @include utils.bpk-rtl {
+            padding-right: tokens.bpk-spacing-sm();
+            padding-left: tokens.bpk-spacing-md();
+          }
+        }
       }
     }
   }
 
   &__row {
+    margin-inline: -1 * tokens.bpk-spacing-md();
+
     &__card {
       flex-basis: calc(
         (
